--- a/app/src/main/res/drawable/ic_episode.xml
+++ b/app/src/main/res/drawable/ic_episode.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-        android:fillColor="#231F20"
-        android:pathData="M434.1,0H77.9C34.9,0 0,34.9 0,77.9v356.1C0,477.1 34.9,512 77.9,512h356.1c43.1,0 77.9,-34.9 77.9,-77.9V77.9C512,34.9 477.1,0 434.1,0zM113.8,227.6H56.9v-56.9h56.9V227.6zM56.9,284.4h56.9v56.9H56.9V284.4zM455.1,227.6h-56.9v-56.9h56.9V227.6zM398.2,284.4h56.9v56.9h-56.9V284.4zM455.1,77.9v35.8h-56.9V56.9h35.8C445.7,56.9 455.1,66.3 455.1,77.9zM77.9,56.9h35.8v56.9H56.9V77.9C56.9,66.3 66.3,56.9 77.9,56.9zM56.9,434.1v-35.8h56.9v56.9H77.9C66.3,455.1 56.9,445.7 56.9,434.1zM455.1,434.1c0,11.6 -9.4,21.1 -21.1,21.1h-35.8v-56.9h56.9V434.1z" />
+        android:fillColor="@android:color/white"
+        android:pathData="M4.3,4.5 L6.05,8H9.05L7.3,4.5H9.3L11.05,8H14.05L12.3,4.5H14.3L16.05,8H19.05L17.3,4.5H19.7Q20.45,4.5 20.975,5.025Q21.5,5.55 21.5,6.3V17.7Q21.5,18.45 20.975,18.975Q20.45,19.5 19.7,19.5H4.3Q3.55,19.5 3.025,18.975Q2.5,18.45 2.5,17.7V6.3Q2.5,5.55 3.025,5.025Q3.55,4.5 4.3,4.5ZM4,9.5V17.7Q4,17.825 4.088,17.913Q4.175,18 4.3,18H19.7Q19.825,18 19.913,17.913Q20,17.825 20,17.7V9.5ZM4,9.5V17.7Q4,17.825 4,17.913Q4,18 4,18Q4,18 4,17.913Q4,17.825 4,17.7Z"/>
 </vector>
